@@ -1,7 +1,7 @@
 #  File src/library/base/R/which.R
 #  Part of the R package, https://www.R-project.org
 #
-#  Copyright (C) 1995-2013 The R Core Team
+#  Copyright (C) 1995-2022 The R Core Team
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -19,7 +19,7 @@
 which <- function(x, arr.ind = FALSE, useNames = TRUE)
 {
     wh <- .Internal(which(x))
-    if (arr.ind && !is.null(d <- dim(x)))
+    if (isTRUE(arr.ind) && !is.null(d <- dim(x)))
 	arrayInd(wh, d, dimnames(x), useNames=useNames) else wh
 }
 
