@@ -1,6 +1,6 @@
 % File src/library/base/man/which.Rd
 % Part of the R package, https://www.R-project.org
-% Copyright 1995-2020 R Core Team
+% Copyright 1995-2022 R Core Team
 % Distributed under GPL 2 or later
 
 \name{which}
@@ -19,7 +19,8 @@ arrayInd(ind, .dim, .dimnames = NULL, useNames = FALSE)
  \item{x}{a \code{\link{logical}} vector or array.  \code{\link{NA}}s
    are allowed and omitted (treated as if \code{FALSE}).}
  \item{arr.ind}{logical; should \bold{arr}ay \bold{ind}ices be returned
-   when \code{x} is an array?}
+   when \code{x} is an array?  Anything other than a single true value
+   is treated as false.}
 
  \item{ind}{integer-valued index vector, as resulting from
    \code{which(x)}.}
